1、更换启动图和图标 2、配置应用默认不全屏

--- a/mobileAppConfig.json
+++ b/mobileAppConfig.json
@@ -40,7 +40,7 @@
     "statusBarStyle":"dark",
     "navigationBarHidden":true,
     "statusBarAppearance":true,
-    "fullScreen":true,
+    "fullScreen":false,
     "orientation":"portrait",
     "messageIntercept":""
 }
