--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4",
-    "moli-dev": "^0.0.7",
+    "less-loader": "^4.0.4"
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.0.5",
     "style-loader": "^0.18.1",
@@ -51,8 +50,7 @@
     "video.js": "^6.2.7",
     "webpack": "2.6.0",
     "webpack-dashboard": "^0.4.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "yymoli": "^1.0.4"
+    "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
      "dev-pc": "moli dev",
