--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4"
+    "less-loader": "^4.0.4",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.0.5",
     "style-loader": "^0.18.1",
